[package]
name = "guirs"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9.6", package = "gtk4" }
glib = "0.20"
gio = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1.4.0"
